src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SCANF
    TERNARIO

Grammar

Rule 0     S' -> S
Rule 1     S -> A
Rule 2     A -> INSTRUCCIONES_GLOBALES
Rule 3     INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL
Rule 4     INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL
Rule 5     DECLARACION_GLOBAL -> DECLA_VARIABLES
Rule 6     DECLARACION_GLOBAL -> DECLA_FUNCIONES
Rule 7     DECLARACION_GLOBAL -> DECLA_STRUCTS
Rule 8     DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA
Rule 9     TIPO -> INT
Rule 10    TIPO -> FLOAT
Rule 11    TIPO -> DOUBLE
Rule 12    TIPO -> VOID
Rule 13    TIPO -> CHAR
Rule 14    TIPO -> STRUCT
Rule 15    LISTA_ID -> LISTA_ID COMA ASIGNA
Rule 16    LISTA_ID -> ASIGNA
Rule 17    ASIGNA -> ID IGUAL EXPRESION
Rule 18    ASIGNA -> ID CORCHETES
Rule 19    ASIGNA -> ID CORCHETES IGUAL EXPRESION
Rule 20    ASIGNA -> ID
Rule 21    CORCHETES -> CORCHETES CORCHETE
Rule 22    CORCHETES -> CORCHETE
Rule 23    CORCHETE -> CORIZQ VALOR CORDER
Rule 24    VALOR -> EXPRESION
Rule 25    VALOR -> <empty>
Rule 26    EXPRESION -> EXPRESION MAS EXPRESION
Rule 27    EXPRESION -> EXPRESION MENOS EXPRESION
Rule 28    EXPRESION -> EXPRESION POR EXPRESION
Rule 29    EXPRESION -> EXPRESION DIV EXPRESION
Rule 30    EXPRESION -> EXPRESION MODULO EXPRESION
Rule 31    EXPRESION -> EXPRESION IGUALQUE EXPRESION
Rule 32    EXPRESION -> EXPRESION DIFERENTE EXPRESION
Rule 33    EXPRESION -> EXPRESION MENORQUE EXPRESION
Rule 34    EXPRESION -> EXPRESION MAYORQUE EXPRESION
Rule 35    EXPRESION -> EXPRESION MENORIGUAL EXPRESION
Rule 36    EXPRESION -> EXPRESION MAYORIGUAL EXPRESION
Rule 37    EXPRESION -> EXPRESION NOTBIT EXPRESION
Rule 38    EXPRESION -> EXPRESION ANDBIT EXPRESION
Rule 39    EXPRESION -> EXPRESION XORBIT EXPRESION
Rule 40    EXPRESION -> EXPRESION ORBIT EXPRESION
Rule 41    EXPRESION -> EXPRESION OR EXPRESION
Rule 42    EXPRESION -> EXPRESION AND EXPRESION
Rule 43    EXPRESION -> SIZEOF PARIZQ EXPRESION PARDER
Rule 44    EXPRESION -> NOTLOGICA EXPRESION
Rule 45    EXPRESION -> EXPRESION SHIFTIZQ EXPRESION
Rule 46    EXPRESION -> EXPRESION SHIFTDER EXPRESION
Rule 47    EXPRESION -> PARIZQ EXPRESION PARDER
Rule 48    EXPRESION -> C_INT EXPRESION
Rule 49    EXPRESION -> C_FLOAT EXPRESION
Rule 50    EXPRESION -> C_CHAR EXPRESION
Rule 51    EXPRESION -> MENOS EXPRESION
Rule 52    EXPRESION -> NOTBIT EXPRESION
Rule 53    EXPRESION -> ANDBIT EXPRESION
Rule 54    EXPRESION -> ID CORCHETES
Rule 55    EXPRESION -> ID LISTA_PUNTOS
Rule 56    EXPRESION -> ID CORCHETES LISTA_PUNTOS
Rule 57    EXPRESION -> ID
Rule 58    EXPRESION -> CADENA
Rule 59    EXPRESION -> CHAR_
Rule 60    EXPRESION -> LLAMADA_FUNCION
Rule 61    EXPRESION -> NUMERO
Rule 62    LLAMADA_FUNCION -> ID PARIZQ PARAMETROS PARDER
Rule 63    LLAMADA_FUNCION -> ID PARIZQ PARDER
Rule 64    PARAMETROS -> PARAMETROS COMA EXPRESION
Rule 65    PARAMETROS -> EXPRESION
Rule 66    DECLA_FUNCIONES -> TIPO ID PARIZQ RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
Rule 67    RECEPCION_PARAMETROS -> RECEPCION_PARAMETROS COMA PARAM
Rule 68    RECEPCION_PARAMETROS -> PARAM
Rule 69    RECEPCION_PARAMETROS -> <empty>
Rule 70    PARAM -> TIPO PUNT
Rule 71    PUNT -> ID PUNTERO
Rule 72    PUNT -> ID
Rule 73    INSTRUCCIONES_INTERNAS -> INSTRUCCIONES_INTERNAS INSTR_IN
Rule 74    INSTRUCCIONES_INTERNAS -> INSTR_IN
Rule 75    INSTR_IN -> DECLA_VARIABLES
Rule 76    INSTR_IN -> ASIGNACIONES
Rule 77    INSTR_IN -> IF_
Rule 78    INSTR_IN -> FOR_
Rule 79    INSTR_IN -> WHILE_
Rule 80    INSTR_IN -> DO_
Rule 81    INSTR_IN -> SWITCH_
Rule 82    INSTR_IN -> LLAMADA_FUNCION PUNTOCOMA
Rule 83    INSTR_IN -> ID DOSPUNTOS
Rule 84    INSTR_IN -> PRINTF PARIZQ PARAMETROS PARDER PUNTOCOMA
Rule 85    INSTR_IN -> RETURN EXPRESION PUNTOCOMA
Rule 86    INSTR_IN -> CONTINUE PUNTOCOMA
Rule 87    INSTR_IN -> BREAK PUNTOCOMA
Rule 88    INSTR_IN -> GOTO ID PUNTOCOMA
Rule 89    ASIGNACIONES -> INCRE_DECRE PUNTOCOMA
Rule 90    ASIGNACIONES -> ID_ACCESO_ATRIBUTO PUNTOCOMA
Rule 91    ASIGNACIONES -> ID_ACCESO_ATRIBUTO OP_ASIGNACION EXPRESION PUNTOCOMA
Rule 92    ASIGNACIONES -> STRUCT PUNTERO PUNTERO IGUAL PARIZQ STRUCT PUNTERO PARDER MALLOC PARIZQ SIZEOF PARIZQ STRUCT PUNTERO PARDER PARDER PUNTOCOMA
Rule 93    ASIGNACIONES -> STRUCT PUNTERO PUNTERO ASIGNA_STRUCT PUNTOCOMA
Rule 94    ID_ACCESO_ATRIBUTO -> ID LISTA_PUNTOS
Rule 95    ID_ACCESO_ATRIBUTO -> ID CORCHETES LISTA_PUNTOS
Rule 96    ID_ACCESO_ATRIBUTO -> ID
Rule 97    ID_ACCESO_ATRIBUTO -> ID CORCHETES
Rule 98    ID_ACCESO_ATRIBUTO -> ID PUNTERO
Rule 99    ID_ACCESO_ATRIBUTO -> ID PUNTERO CORCHETES
Rule 100   LISTA_PUNTOS -> LISTA_PUNTOS ACCES ID
Rule 101   LISTA_PUNTOS -> LISTA_PUNTOS ACCES ID CORCHETES
Rule 102   LISTA_PUNTOS -> ACCES ID
Rule 103   LISTA_PUNTOS -> ACCES ID CORCHETES
Rule 104   ACCES -> PUNTO
Rule 105   ACCES -> FLECHA
Rule 106   IF_ -> IF PARIZQ EXPRESION PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER ELSE_
Rule 107   IF_ -> IF PARIZQ EXPRESION PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
Rule 108   ELSE_ -> ELSE IF_
Rule 109   ELSE_ -> ELSE LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
Rule 110   FOR_ -> FOR PARIZQ DECLA_VARIABLES EXPRESION PUNTOCOMA INCRE_DECRE PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
Rule 111   WHILE_ -> WHILE PARIZQ EXPRESION PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
Rule 112   DO_ -> DO LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER WHILE PARIZQ EXPRESION PARDER PUNTOCOMA
Rule 113   SWITCH_ -> SWITCH PARIZQ EXPRESION PARDER LLAVEIZQ LISTA_CASES DEFAULT_ LLAVEDER
Rule 114   LISTA_CASES -> LISTA_CASES CASE_
Rule 115   LISTA_CASES -> CASE_
Rule 116   CASE_ -> CASE EXPRESION DOSPUNTOS INSTRUCCIONES_INTERNAS BREAK_
Rule 117   BREAK_ -> BREAK
Rule 118   BREAK_ -> <empty>
Rule 119   DEFAULT_ -> DEFAULT DOSPUNTOS INSTRUCCIONES_INTERNAS BREAK_
Rule 120   DEFAULT_ -> <empty>
Rule 121   INCRE_DECRE -> INCRE_DECRE_POST
Rule 122   INCRE_DECRE -> INCRE_DECRE_PRE
Rule 123   INCRE_DECRE_POST -> ID SIG
Rule 124   INCRE_DECRE_PRE -> SIG ID
Rule 125   SIG -> INCREMENTO
Rule 126   SIG -> DECREMENTO
Rule 127   OP_ASIGNACION -> IGUAL
Rule 128   OP_ASIGNACION -> MASIGUAL
Rule 129   OP_ASIGNACION -> MENOSIGUAL
Rule 130   OP_ASIGNACION -> PORIGUAL
Rule 131   OP_ASIGNACION -> DIVIGUAL
Rule 132   OP_ASIGNACION -> MODIGUAL
Rule 133   OP_ASIGNACION -> SIIGUAL
Rule 134   OP_ASIGNACION -> SDIGUAL
Rule 135   OP_ASIGNACION -> ANDIGUAL
Rule 136   OP_ASIGNACION -> XORIGUAL
Rule 137   OP_ASIGNACION -> ORIGUAL
Rule 138   DECLA_STRUCTS -> STRUCT ID LLAVEIZQ ATRIBUTOS LLAVEDER PUNTOCOMA
Rule 139   ATRIBUTOS -> ATRIBUTOS ATR
Rule 140   ATRIBUTOS -> ATR
Rule 141   ATR -> DECLA_VARIABLES
Rule 142   ATR -> STRUCT ID PUNTERO ASIGNA_STRUCT PUNTOCOMA
Rule 143   ASIGNA_STRUCT -> IGUAL EXPRESION
Rule 144   ASIGNA_STRUCT -> <empty>
Rule 145   PUNTERO -> LISTA_ASTERISCOS ID
Rule 146   PUNTERO -> ID LISTA_ASTERISCOS
Rule 147   PUNTERO -> ID
Rule 148   LISTA_ASTERISCOS -> LISTA_ASTERISCOS POR
Rule 149   LISTA_ASTERISCOS -> POR

Terminals, with rules where they appear

AND                  : 42
ANDBIT               : 38 53
ANDIGUAL             : 135
BREAK                : 87 117
CADENA               : 58
CASE                 : 116
CHAR                 : 13
CHAR_                : 59
COMA                 : 15 64 67
CONTINUE             : 86
CORDER               : 23
CORIZQ               : 23
C_CHAR               : 50
C_FLOAT              : 49
C_INT                : 48
DECREMENTO           : 126
DEFAULT              : 119
DIFERENTE            : 32
DIV                  : 29
DIVIGUAL             : 131
DO                   : 112
DOSPUNTOS            : 83 116 119
DOUBLE               : 11
ELSE                 : 108 109
FLECHA               : 105
FLOAT                : 10
FOR                  : 110
GOTO                 : 88
ID                   : 17 18 19 20 54 55 56 57 62 63 66 71 72 83 88 94 95 96 97 98 99 100 101 102 103 123 124 138 142 145 146 147
IF                   : 106 107
IGUAL                : 17 19 92 127 143
IGUALQUE             : 31
INCREMENTO           : 125
INT                  : 9
LLAVEDER             : 66 106 107 109 110 111 112 113 138
LLAVEIZQ             : 66 106 107 109 110 111 112 113 138
MALLOC               : 92
MAS                  : 26
MASIGUAL             : 128
MAYORIGUAL           : 36
MAYORQUE             : 34
MENORIGUAL           : 35
MENORQUE             : 33
MENOS                : 27 51
MENOSIGUAL           : 129
MODIGUAL             : 132
MODULO               : 30
NOTBIT               : 37 52
NOTLOGICA            : 44
NUMERO               : 61
OR                   : 41
ORBIT                : 40
ORIGUAL              : 137
PARDER               : 43 47 62 63 66 84 92 92 92 106 107 110 111 112 113
PARIZQ               : 43 47 62 63 66 84 92 92 92 106 107 110 111 112 113
POR                  : 28 148 149
PORIGUAL             : 130
PRINTF               : 84
PUNTO                : 104
PUNTOCOMA            : 8 82 84 85 86 87 88 89 90 91 92 93 110 112 138 142
RETURN               : 85
SCANF                : 
SDIGUAL              : 134
SHIFTDER             : 46
SHIFTIZQ             : 45
SIIGUAL              : 133
SIZEOF               : 43 92
STRUCT               : 14 92 92 92 93 138 142
SWITCH               : 113
TERNARIO             : 
VOID                 : 12
WHILE                : 111 112
XORBIT               : 39
XORIGUAL             : 136
error                : 

Nonterminals, with rules where they appear

A                    : 1
ACCES                : 100 101 102 103
ASIGNA               : 15 16
ASIGNACIONES         : 76
ASIGNA_STRUCT        : 93 142
ATR                  : 139 140
ATRIBUTOS            : 138 139
BREAK_               : 116 119
CASE_                : 114 115
CORCHETE             : 21 22
CORCHETES            : 18 19 21 54 56 95 97 99 101 103
DECLARACION_GLOBAL   : 3 4
DECLA_FUNCIONES      : 6
DECLA_STRUCTS        : 7
DECLA_VARIABLES      : 5 75 110 141
DEFAULT_             : 113
DO_                  : 80
ELSE_                : 106
EXPRESION            : 17 19 24 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 45 46 46 47 48 49 50 51 52 53 64 65 85 91 106 107 110 111 112 113 116 143
FOR_                 : 78
ID_ACCESO_ATRIBUTO   : 90 91
IF_                  : 77 108
INCRE_DECRE          : 89 110
INCRE_DECRE_POST     : 121
INCRE_DECRE_PRE      : 122
INSTRUCCIONES_GLOBALES : 2 3
INSTRUCCIONES_INTERNAS : 66 73 106 107 109 110 111 112 116 119
INSTR_IN             : 73 74
LISTA_ASTERISCOS     : 145 146 148
LISTA_CASES          : 113 114
LISTA_ID             : 8 15
LISTA_PUNTOS         : 55 56 94 95 100 101
LLAMADA_FUNCION      : 60 82
OP_ASIGNACION        : 91
PARAM                : 67 68
PARAMETROS           : 62 64 84
PUNT                 : 70
PUNTERO              : 71 92 92 92 92 93 93 98 99 142
RECEPCION_PARAMETROS : 66 67
S                    : 0
SIG                  : 123 124
SWITCH_              : 81
TIPO                 : 8 66 70
VALOR                : 23
WHILE_               : 79

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . A
    (2) A -> . INSTRUCCIONES_GLOBALES
    (3) INSTRUCCIONES_GLOBALES -> . INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL
    (4) INSTRUCCIONES_GLOBALES -> . DECLARACION_GLOBAL
    (5) DECLARACION_GLOBAL -> . DECLA_VARIABLES
    (6) DECLARACION_GLOBAL -> . DECLA_FUNCIONES
    (7) DECLARACION_GLOBAL -> . DECLA_STRUCTS
    (8) DECLA_VARIABLES -> . TIPO LISTA_ID PUNTOCOMA
    (66) DECLA_FUNCIONES -> . TIPO ID PARIZQ RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
    (138) DECLA_STRUCTS -> . STRUCT ID LLAVEIZQ ATRIBUTOS LLAVEDER PUNTOCOMA
    (9) TIPO -> . INT
    (10) TIPO -> . FLOAT
    (11) TIPO -> . DOUBLE
    (12) TIPO -> . VOID
    (13) TIPO -> . CHAR
    (14) TIPO -> . STRUCT

    STRUCT          shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    CHAR            shift and go to state 14

    S                              shift and go to state 1
    A                              shift and go to state 2
    INSTRUCCIONES_GLOBALES         shift and go to state 3
    DECLARACION_GLOBAL             shift and go to state 4
    DECLA_VARIABLES                shift and go to state 5
    DECLA_FUNCIONES                shift and go to state 6
    DECLA_STRUCTS                  shift and go to state 7
    TIPO                           shift and go to state 8

state 1

    (0) S' -> S .



state 2

    (1) S -> A .

    $end            reduce using rule 1 (S -> A .)


state 3

    (2) A -> INSTRUCCIONES_GLOBALES .
    (3) INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES . DECLARACION_GLOBAL
    (5) DECLARACION_GLOBAL -> . DECLA_VARIABLES
    (6) DECLARACION_GLOBAL -> . DECLA_FUNCIONES
    (7) DECLARACION_GLOBAL -> . DECLA_STRUCTS
    (8) DECLA_VARIABLES -> . TIPO LISTA_ID PUNTOCOMA
    (66) DECLA_FUNCIONES -> . TIPO ID PARIZQ RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
    (138) DECLA_STRUCTS -> . STRUCT ID LLAVEIZQ ATRIBUTOS LLAVEDER PUNTOCOMA
    (9) TIPO -> . INT
    (10) TIPO -> . FLOAT
    (11) TIPO -> . DOUBLE
    (12) TIPO -> . VOID
    (13) TIPO -> . CHAR
    (14) TIPO -> . STRUCT

    $end            reduce using rule 2 (A -> INSTRUCCIONES_GLOBALES .)
    STRUCT          shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    CHAR            shift and go to state 14

    DECLARACION_GLOBAL             shift and go to state 15
    DECLA_VARIABLES                shift and go to state 5
    DECLA_FUNCIONES                shift and go to state 6
    DECLA_STRUCTS                  shift and go to state 7
    TIPO                           shift and go to state 8

state 4

    (4) INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .

    STRUCT          reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    INT             reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    FLOAT           reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    DOUBLE          reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    VOID            reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    CHAR            reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)
    $end            reduce using rule 4 (INSTRUCCIONES_GLOBALES -> DECLARACION_GLOBAL .)


state 5

    (5) DECLARACION_GLOBAL -> DECLA_VARIABLES .

    STRUCT          reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    INT             reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    FLOAT           reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    DOUBLE          reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    VOID            reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    CHAR            reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)
    $end            reduce using rule 5 (DECLARACION_GLOBAL -> DECLA_VARIABLES .)


state 6

    (6) DECLARACION_GLOBAL -> DECLA_FUNCIONES .

    STRUCT          reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    INT             reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    FLOAT           reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    DOUBLE          reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    VOID            reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    CHAR            reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)
    $end            reduce using rule 6 (DECLARACION_GLOBAL -> DECLA_FUNCIONES .)


state 7

    (7) DECLARACION_GLOBAL -> DECLA_STRUCTS .

    STRUCT          reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    INT             reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    FLOAT           reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    DOUBLE          reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    VOID            reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    CHAR            reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)
    $end            reduce using rule 7 (DECLARACION_GLOBAL -> DECLA_STRUCTS .)


state 8

    (8) DECLA_VARIABLES -> TIPO . LISTA_ID PUNTOCOMA
    (66) DECLA_FUNCIONES -> TIPO . ID PARIZQ RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
    (15) LISTA_ID -> . LISTA_ID COMA ASIGNA
    (16) LISTA_ID -> . ASIGNA
    (17) ASIGNA -> . ID IGUAL EXPRESION
    (18) ASIGNA -> . ID CORCHETES
    (19) ASIGNA -> . ID CORCHETES IGUAL EXPRESION
    (20) ASIGNA -> . ID

    ID              shift and go to state 17

    LISTA_ID                       shift and go to state 16
    ASIGNA                         shift and go to state 18

state 9

    (138) DECLA_STRUCTS -> STRUCT . ID LLAVEIZQ ATRIBUTOS LLAVEDER PUNTOCOMA
    (14) TIPO -> STRUCT .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 19

  ! ID              [ reduce using rule 14 (TIPO -> STRUCT .) ]


state 10

    (9) TIPO -> INT .

    ID              reduce using rule 9 (TIPO -> INT .)


state 11

    (10) TIPO -> FLOAT .

    ID              reduce using rule 10 (TIPO -> FLOAT .)


state 12

    (11) TIPO -> DOUBLE .

    ID              reduce using rule 11 (TIPO -> DOUBLE .)


state 13

    (12) TIPO -> VOID .

    ID              reduce using rule 12 (TIPO -> VOID .)


state 14

    (13) TIPO -> CHAR .

    ID              reduce using rule 13 (TIPO -> CHAR .)


state 15

    (3) INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .

    STRUCT          reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    INT             reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    FLOAT           reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    DOUBLE          reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    VOID            reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    CHAR            reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)
    $end            reduce using rule 3 (INSTRUCCIONES_GLOBALES -> INSTRUCCIONES_GLOBALES DECLARACION_GLOBAL .)


state 16

    (8) DECLA_VARIABLES -> TIPO LISTA_ID . PUNTOCOMA
    (15) LISTA_ID -> LISTA_ID . COMA ASIGNA

    PUNTOCOMA       shift and go to state 20
    COMA            shift and go to state 21


state 17

    (66) DECLA_FUNCIONES -> TIPO ID . PARIZQ RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
    (17) ASIGNA -> ID . IGUAL EXPRESION
    (18) ASIGNA -> ID . CORCHETES
    (19) ASIGNA -> ID . CORCHETES IGUAL EXPRESION
    (20) ASIGNA -> ID .
    (21) CORCHETES -> . CORCHETES CORCHETE
    (22) CORCHETES -> . CORCHETE
    (23) CORCHETE -> . CORIZQ VALOR CORDER

    PARIZQ          shift and go to state 22
    IGUAL           shift and go to state 23
    PUNTOCOMA       reduce using rule 20 (ASIGNA -> ID .)
    COMA            reduce using rule 20 (ASIGNA -> ID .)
    CORIZQ          shift and go to state 26

    CORCHETES                      shift and go to state 24
    CORCHETE                       shift and go to state 25

state 18

    (16) LISTA_ID -> ASIGNA .

    PUNTOCOMA       reduce using rule 16 (LISTA_ID -> ASIGNA .)
    COMA            reduce using rule 16 (LISTA_ID -> ASIGNA .)


state 19

    (138) DECLA_STRUCTS -> STRUCT ID . LLAVEIZQ ATRIBUTOS LLAVEDER PUNTOCOMA

    LLAVEIZQ        shift and go to state 27


state 20

    (8) DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .

    STRUCT          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    INT             reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    FLOAT           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    DOUBLE          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    VOID            reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    CHAR            reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    $end            reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    LLAVEDER        reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    ID              reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    PRINTF          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    RETURN          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    CONTINUE        reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    BREAK           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    GOTO            reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    IF              reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    FOR             reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    WHILE           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    DO              reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    SWITCH          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    INCREMENTO      reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    DECREMENTO      reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    SIZEOF          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    NOTLOGICA       reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    PARIZQ          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    C_INT           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    C_FLOAT         reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    C_CHAR          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    MENOS           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    NOTBIT          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    ANDBIT          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    CADENA          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    CHAR_           reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    NUMERO          reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    DEFAULT         reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)
    CASE            reduce using rule 8 (DECLA_VARIABLES -> TIPO LISTA_ID PUNTOCOMA .)


state 21

    (15) LISTA_ID -> LISTA_ID COMA . ASIGNA
    (17) ASIGNA -> . ID IGUAL EXPRESION
    (18) ASIGNA -> . ID CORCHETES
    (19) ASIGNA -> . ID CORCHETES IGUAL EXPRESION
    (20) ASIGNA -> . ID

    ID              shift and go to state 29

    ASIGNA                         shift and go to state 28

state 22

    (66) DECLA_FUNCIONES -> TIPO ID PARIZQ . RECEPCION_PARAMETROS PARDER LLAVEIZQ INSTRUCCIONES_INTERNAS LLAVEDER
    (67) RECEPCION_PARAMETROS -> . RECEPCION_PARAMETROS COMA PARAM
    (68) RECEPCION_PARAMETROS -> . PARAM
    (69) RECEPCION_PARAMETROS -> .
    (70) PARAM -> . TIPO PUNT
    (9) TIPO -> . INT
    (10) TIPO -> . FLOAT
    (11) TIPO -> . DOUBLE
    (12) TIPO -> . VOID
    (13) TIPO -> . CHAR
    (14) TIPO -> . STRUCT

    PARDER          reduce using rule 69 (RECEPCION_PARAMETROS -> .)
    COMA            reduce using rule 69 (RECEPCION_PARAMETROS -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    CHAR            shift and go to state 14
    STRUCT          shift and go to state 33

    TIPO                           shift and go to state 30
    RECEPCION_PARAMETROS           shift and go to state 31
    PARAM                          shift and go to state 32

state 23
